# LongMemEval-V2

./: README.md  pyproject.toml
evaluation/: harness.py  run_eval.py
evaluation/scripts/: dynamic_full_run_manager.py  run_agentrunbook_c.sh  run_agentrunbook_c_dynamic.sh  run_agentrunbook_c_dynamic_openrouter_local_codex.sh  run_agentrunbook_r.sh  run_codex.sh  run_no_retrieval.sh  run_rag_query_to_slice.sh  run_rag_query_to_slice_notes.sh  run_thinharness_dynamic.sh
leaderboard/: README.md
memory_modules/: memory.py  thinharness_corpus.py  thinharness_memory.py
